--- a/index.html
+++ b/index.html
@@ -7,59 +7,111 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #001f3f; /* Dark blue background */
+            font-family: 'Poppins', sans-serif;
+            background-color: #0d1b2a;
             color: white;
+            overflow-x: hidden;
         }
         header {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             padding: 20px 40px;
-            background-color: #0057b7; /* Bright blue */
+            background-color: #1b263b;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
         header img {
-            width: 120px;
+            width: 150px;
+            transition: transform 0.3s ease;
+        }
+        header img:hover {
+            transform: scale(1.1);
         }
         header nav a {
             color: white;
-            margin-left: 20px;
+            margin-left: 30px;
             text-decoration: none;
             font-weight: bold;
+            font-size: 1.1rem;
+            position: relative;
+        }
+        header nav a::after {
+            content: '';
+            width: 0;
+            height: 2px;
+            background-color: #00aaff;
+            position: absolute;
+            left: 0;
+            bottom: -5px;
+            transition: width 0.3s ease;
+        }
+        header nav a:hover::after {
+            width: 100%;
         }
         .hero {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 80vh;
-            background: linear-gradient(135deg, #001f3f 0%, #007bff 100%); /* Gradient blue background */
+            height: 100vh;
+            background: linear-gradient(135deg, #001f3f 0%, #007bff 100%);
             text-align: center;
             padding: 20px;
+            animation: fadeIn 2s ease;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         .hero h1 {
-            font-size: 4rem;
+            font-size: 4.5rem;
             margin-bottom: 20px;
+            animation: slideIn 1.5s ease;
+        }
+        @keyframes slideIn {
+            from { transform: translateY(-50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
         .hero p {
-            font-size: 1.5rem;
+            font-size: 1.7rem;
             margin-bottom: 40px;
+            animation: slideIn 1.8s ease;
         }
         .hero button {
-            padding: 15px 30px;
-            background-color: #0099ff; /* Lighter blue */
+            padding: 15px 40px;
+            background-color: #00aaff;
             border: none;
-            border-radius: 30px;
+            border-radius: 50px;
             color: white;
-            font-size: 1rem;
+            font-size: 1.2rem;
             cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            animation: pulse 2s infinite;
+        }
+        .hero button:hover {
+            background-color: #007acc;
+            transform: scale(1.05);
+        }
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
         }
         footer {
-            background-color: #001f3f; /* Match body background */
-            padding: 20px 40px;
+            background-color: #0d1b2a;
+            padding: 30px 40px;
             text-align: center;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3);
         }
         footer p {
             margin: 0;
-            color: #0099ff; /* Lighter blue */
+            color: #00aaff;
+            font-size: 1.1rem;
+            transition: color 0.3s ease;
+        }
+        footer p:hover {
+            color: #007acc;
         }
     </style>
 </head>
@@ -67,6 +119,7 @@
     <header>
         <img src="your-logo.png" alt="SoundWave Logo">
         <nav>
+            <a href="#">Home</a>
         </nav>
     </header>
 
